force-app/main/default/objects/Trade__c/Trade__c.object-meta.xml
<CustomObject>
    <!---->
    <label>Trade</label>
    <nameField>
        <label>Trade Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>