force-app/main/default/objects/Trade__c/fields/Date_Booked__c.field-meta.xml
<CustomField>
    <fullName>Date_Booked__c</fullName>
    <label>Date Booked</label>
    <length>255</length>
    <type>Text</type>
</CustomField>