force-app/main/default/objects/Trade__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <label>ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>