force-app/main/default/objects/Trade__c/fields/Sell_Currency__c.field-meta.xml
<CustomField>
    <fullName>Sell_Currency__c</fullName>
    <label>Sell Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>